# slide-maker

./: .gitignore  AGENTS.md  README.md  SKILL.md  claude.md  handoff.md  mirror.sh  package-lock.json  package.json  preamble.md  pyproject.toml  requirements.txt
docs/: README.txt  SKILL.md  html2pptx.md  preamble.md
slides/: README.md
src/: __init__.py
templates/: README.md
workspace/: generate-eda-presentation.js
workspace/html-slides/: slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-07.html  slide-08.html  slide-09.html  slide-10.html  slide-11.html  slide-12.html  slide-13.html  slide-14.html  slide-15.html  slide-16.html  slide-17.html  slide-18.html  slide-20.html  slide-21.html  slide-22.html  slide-23.html  slide-24.html
workspace/presentations/: eda-lstm-vwc-prediction.pptx
